--- a/source/trivia_game/Rakefile
+++ b/source/trivia_game/Rakefile
@@ -1,7 +1,9 @@
 require 'rake'
 require 'rspec/core/rake_task'
-
 require_relative 'config/application'
+
+require_relative 'db/seeds'
+
 
 desc "create the database"
 task "db:create" do
@@ -26,7 +28,8 @@ end
 
 desc "populate the test database with sample data"
 task "db:seed" do
-  require APP_ROOT.join('db', 'seeds.rb')
+  QuestionsImporter.import
+  # require APP_ROOT.join('db', 'seeds.rb')
 end
 
 desc 'Retrieves the current schema version number'
